# ai-customer-support

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.ui  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  embedding.py  logger.py  main.py  rag.py
data/: faq.json
pipeline/: ingest.py  ingest_to_bigquery.py  setup_postgres.py  setup_qdrant.py
terraform/: main.tf  provider.tf  variable.tf
ui/: streamlit_app.py
